Migrate to new Jackson version and clean up code